ansible/files/test_dp.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: test-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-pod
        image: nginx:latest
        ports:
        - containerPort: 80
