ansible/files/django_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  type: NodePort
  ports:
  - port: 8888
    nodePort: 30001
    protocol: TCP
  selector:
    app: django-app
