ansible/files/test_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30003
  selector:
    app: test-app
